--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 	<head>
 		<meta charset="UTF-8"/>
-		<title>Mikołaj Pacierz - Github</title>
+		<title>Szewczyk Jakub - Github</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="description" content="Prezentacja mojego Githuba" />
 		<meta name="keywords" content="github"/>
@@ -11,7 +11,7 @@
 		<link rel="shortcut icon" type="image/x-icon" href="icon.png" />
 		<link rel="preconnect" href="https://fonts.gstatic.com"/>
 		<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet"/>
-		<meta name="author" content="Mikołaj Pacierz"/>
+		<meta name="author" content="Szewczyk Jakub"/>
 		<meta name="robots" content="noindex, nofollow"/>
 
 	</head>
@@ -20,39 +20,15 @@
 		<div id="container">
 			<br>
 			<div id="top">
-				Mikołaj Pacierz - Github
+				Szewczyk Jakub - Github
 
-			</div>
-
-			<div id="clock">
-
-			</div>
-
-			<script>
-				let clock = () => {
-				let date = new Date();
-				let hrs = date.getHours();
-				let mins = date.getMinutes();
-				let secs = date.getSeconds();
-
-				hrs = hrs < 10 ? "0" + hrs : hrs;
-				mins = mins < 10 ? "0" + mins : mins;
-				secs = secs < 10 ? "0" + secs : secs;
-
-				let time = `${hrs}:${mins}:${secs}`;
-				document.getElementById("clock").innerText = time;
-				setTimeout(clock, 1000);
-				};
-
-				clock();
-			</script>
+			
 
 			<div id="nav">
 				<ol>
 					<li><a href="index.html">Strona główna</a></li>
 					<li><a href="arkusze.html">Arkusze</a></li>
 					<li><a target="_blank" href="https://github.com/Pacierz/Pacierz.github.io/tree/master/JS">JavaScript</a></li>
-					<li><a target="_blank" href="https://drive.google.com/drive/u/2/folders/1hlVGTleogo7SrJvizATiDohF1YHthdiW">Python</a></li>
 					<li><a target="_blank" href="https://pacierzportfolio.000webhostapp.com">Moje portfolio</a></li>
 					<li><a href="links.html">Przydatne linki</a></li>
 				</ol>
@@ -60,13 +36,13 @@
 
 			<div class="main" id="homepage">
 				<h1>Strona główna</h1>
-				<p>Witaj na moim Githubie!<br>Będziesz mógł/mogła tu zobaczyć wykonane przeze mnie prace i rozwiązane arkusze egzaminacyjne. Znajdziesz tu również moje portfolio oraz kilka linków, które mogą przydać się w nauce programowania. </p>
+				<p>Witaj na moim Githubie!<br>Znajdziesz tu moje prace, które wykonuję w ramach nauki w szkole ZSE Kielce  </p>
 				<br><br>
 
 			</div>
 
 			<div id="footer">
-				<p>Stronę opracował: Mikołaj Pacierz. Wszelkie prawa zastrzeżone &copy; 2020</p>
+				<p>Stronę opracował: Szewczyk Jakub . Wszelkie prawa zastrzeżone &copy; 2021</p>
 
 				</div>
 			</div>
