--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 					<li><a href="index.html">Strona główna</a></li>
 					<li><a href="arkusze.html">Arkusze</a></li>
 					<li><a target="_blank" href="https://github.com/Pacierz/Pacierz.github.io/tree/master/JS">JavaScript</a></li>
-					<li><a target="_blank" href="https://pacierzportfolio.000webhostapp.com">Moje portfolio</a></li>
-					<li><a href="links.html">Przydatne linki</a></li>
+					<li><a target="_blank" href="https://github.com/Pacierz/Pacierz.github.io/tree/master/JS">Moje Portfolio</a></li>
 				</ol>
 			</div>
 
