--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<ol>
 					<li><a href="index.html">Strona główna</a></li>
 					<li><a href="arkusze.html">Arkusze</a></li>
-					<li><a target="_blank" href="https://github.com/Pacierz/Pacierz.github.io/tree/master/JS">JavaScript</a></li>
+					<li><a target="_blank" href="https://github.com/JakubSzewczykk/JakubSzewczykk.github.io/tree/main/Java</a></li>
 					<li><a target="_blank" href="https://github.com/Pacierz/Pacierz.github.io/tree/master/JS">Moje Portfolio</a></li>
 				</ol>
 			</div>
